# Требуем минимальную версию cmake - типовая строчка для любого CMakeLists.txt
cmake_minimum_required(VERSION 3.15)

set(PICO_BOARD pico)
set(PICO_PLATFORM rp2040)

# Добавляем файл, автоматически подтягивающий Pico SDK в наш проект - специфика сборки под Pico
include(pico_sdk_import.cmake)

# Создаем проект. Аргументом указывается имя проекта - типовая строчка для любого CMakeLists.txt
project(01_blink)

# Вызываем функцию инициализации Pico SDK - специфика сборки под Pico
pico_sdk_init()

# Добавляем в проект файлы с исходным кодом - типовая строчка для любого CMakeLists.txt
add_executable(01_blink
	${CMAKE_CURRENT_SOURCE_DIR}/main.c
)

# Указываем на какие библиотеки ссылается наш код - типовая строчка для любого CMakeLists.txt
target_link_libraries(01_blink
	pico_stdlib
)

# Указываем файл, в котором находится линкер скрипт - специфика сборки под МК
pico_set_linker_script(01_blink ${CMAKE_CURRENT_SOURCE_DIR}/memmap_rp2040.ld)

# Добавляем задачи генерации бинарника в разных форматах - специфика сборки под Pico
pico_add_extra_outputs(01_blink)