# Требуем минимальную версию cmake - типовая строчка для любого CMakeLists.txt
cmake_minimum_required(VERSION 3.15)

set(PICO_BOARD pico)
set(PICO_PLATFORM rp2040)

# Добавляем файл, автоматически подтягивающий Pico SDK в наш проект - специфика сборки под Pico
include(pico_sdk_import.cmake)

# Создаем проект. Аргументом указывается имя проекта - типовая строчка для любого CMakeLists.txt
project(03-adc)

# Вызываем функцию инициализации Pico SDK - специфика сборки под Pico
pico_sdk_init()

# Добавляем в проект файлы с исходным кодом - типовая строчка для любого CMakeLists.txt
add_executable(${PROJECT_NAME}
	${CMAKE_CURRENT_SOURCE_DIR}/main.c
	${CMAKE_CURRENT_SOURCE_DIR}/stdio-task/stdio-task.c
	${CMAKE_CURRENT_SOURCE_DIR}/protocol-task/protocol-task.c
	${CMAKE_CURRENT_SOURCE_DIR}/led-task/led-task.c
	${CMAKE_CURRENT_SOURCE_DIR}/adc-task/adc-task.c
)

# Указываем на какие библиотеки ссылается наш код - типовая строчка для любого CMakeLists.txt
target_link_libraries(${PROJECT_NAME}
	pico_stdlib
	hardware_adc
)

# Указываем файл, в котором находится линкер скрипт - специфика сборки под МК
pico_set_linker_script(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/memmap_rp2040.ld)

# настройки вывода stdio в интерфейс USB
pico_enable_stdio_uart(${PROJECT_NAME} 0)
pico_enable_stdio_usb(${PROJECT_NAME} 1)

# Добавляем задачи генерации бинарника в разных форматах - специфика сборки под Pico
pico_add_extra_outputs(${PROJECT_NAME})
